# rpi-quantum-hackathon-2026

./: .gitignore  README.md  benchmark_qbraid_qaoa.py  benchmark_qbraid_qaoa_presentation.ipynb  bhagat_quantum_hackathon.pptx  compass.yml  pyproject.toml  qbraid_benchmark.py  requirements.txt  revitalized.ipynb  wildfire_decomposed.py  wildfire_grid.py  wildfire_hardware.py  wildfire_qaoa_comparison_final.py
Qfire-RPI-Quantum-Hackathon--master/: .gitignore  OverviewSummary.md  README.md  SUBMISSION_SUMMARY.md  finish-plan.md  mvp-env.md  tasks.md
Qfire-RPI-Quantum-Hackathon--master/Backend/: .env.example  README.md  requirements.txt  test_api.py  test_services.py
Qfire-RPI-Quantum-Hackathon--master/Backend/app/: __init__.py  db.py  main.py  (+1 more)
Qfire-RPI-Quantum-Hackathon--master/Frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: architecture.md  problem.md  process.md  qaoa.md  results.md  running.md
frontend/: index.html  visualize.py
login/: login.py
results/: benchmark_results.json
src/: GPTCircuit.py  GPTCircuitImproved.py  Grid.py  GridQuantumCircuit.py  LayerOptimizedCircuit.py  dashboard.py  main.py  plot_wildfire_3d.py
src/executors/: __init__.py  base.py  qbraid_executor.py  qiskit_executor.py
src/optimizers/: __init__.py  base.py  scipy_optimizer.py  spsa_optimizer.py
src/problems/: __init__.py  base.py  maxcut.py  maxcut_model.py
src/utils/: wildfire_3d_visualization.py  wildfire_visualization.py
submissions/marketmind-q/: .gitignore  README.md  SUBMISSION.md  requirements-qbraid.txt  requirements.txt
(+122 files in other folders)
